# QuitC-Lang

./: README.md  api.py  how-to-use-quitc.md  pyproject.toml  requirements.txt
core/: ast_nodes.py  env.py  errors.py  interpreter.py  lexer.py  parser.py  test_lexer.py
core/runtime/: sarcastic_messages.py
quitc_lang/: cli.py  main.py
quitc_lang/core/: ast_nodes.py  env.py  errors.py  interpreter.py  lexer.py  parser.py  test_lexer.py
quitc_lang/core/runtime/: sarcastic_messages.py
quitc_lang/examples/: demo.qc
web/: index.html
