[project]
name = "quitc"
version = "0.1.0"
description = "A Language designed to make you rage and hate C syntax"
authors = [{ name="Harshit Thota" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.14.0",
    "rich>=13.0.0"
]

[project.scripts]
quitc = "quitc_lang.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"